# frobese-2020

./: .gitignore  .gitmodules
elixir_intro/: README.md  mix.exs
elixir_intro/.devcontainer/: devcontainer.json
elixir_intro/lib/: animal.ex  inc_server.ex  intro.ex  process_demo.ex
elixir_intro/test/: animal_test.exs  intro_test.exs
erlang/: inc_server.erl  intro.erl
erlbank/deployment/: docker-compose.yml  import_kibana_dashboard.sh
erlbank/monolithic/: rebar.config
erlbank/monolithic/src/: data.hrl  database.erl
erlbank/nginx/html/: index.html
erlbank/nginx/sites-enabled/: default.conf  default.template
erlbank/skeleton/: entrypoint.sh  foo  rebar.config
erlbank/skeleton/src/: erlbank_flex_accounts.app.src  web_frontend.erl
foundation/: component.puml  container.puml  context.puml
haskell-code/: funar-code.cabal
phone-mike/: mix.exs
phone-mike-prep/: mix.exs
phone-mike-prep/lib/: exchange.ex  phone.ex  phone_connection.ex  phone_connection_sup.ex  phone_sup.ex
phone-mike-prep/test/: phone_test.exs
phone-mike/lib/: connection.ex  exchange.ex  parse_term.ex  phone.ex  phone_supervisor.ex
racket/: tag1.rkt  tag2-schleifen.rkt  tag2.rkt
