cabal-version:       2.4
name:                funar-code
version:             0.1.0.0
license:             NONE
author:              Mike Sperber
maintainer:          michael.sperber@active-group.de

library
  build-depends: base >=4.12.0.0,
                 containers >= 0.6.0.1

  -- hs-source-dirs:
  default-language:    Haskell2010

  exposed-modules: Contract

